cluster/k8s/kube-api-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-api-proxy
  labels:
    pod-security.kubernetes.io/enforce: privileged
