cluster/k8s/kube-api-proxy/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-api-proxy
  namespace: kube-api-proxy
  labels:
    app.kubernetes.io/name: kube-api-proxy
  annotations:
    kustomize.toolkit.fluxcd.io/force: "enabled"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-api-proxy
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/name: kube-api-proxy
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        topology.kubernetes.io/region: hil
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: nginx
          image: docker.io/library/nginx:alpine
          ports:
            - containerPort: 16443
              hostPort: 16443
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: tls
              mountPath: /etc/nginx/tls
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: kube-api-proxy-config
        - name: tls
          secret:
            secretName: kube-api-proxy-tls
